--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
